--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,68 @@
-Flask==0.12.2
-Flask-SocketIO==4.3.1
-python-engineio==3.13.2
-python-socketio==4.6.0
-eventlet==0.17.4
-python-dotenv==0.14.0
+aiohttp==3.7.4.post0
+arcade==2.5.7
+async-timeout==3.0.1
+attrs==21.2.0
+autopep8==1.5.5
+backcall==0.2.0
+bidict==0.21.3
+certifi==2020.12.5
+cffi==1.14.5
+chardet==4.0.0
+click==8.0.1
+colorama==0.4.4
+decorator==4.4.2
+discord==1.0.1
+Discord-Anti-Spam==0.8.0
+discord-buttons==0.5
+discord-components==1.1.4
+discord.py==1.7.2
+Flask==2.0.1
+Flask-SocketIO==5.1.1
+fuzzywuzzy==0.18.0
+gunicorn==20.1.0
+idna==2.10
+ipykernel==5.5.0
+ipython==7.21.0
+ipython-genutils==0.2.0
+itsdangerous==2.0.1
+jedi==0.18.0
+Jinja2==3.0.1
+jupyter-client==6.1.11
+jupyter-core==4.7.1
+MarkupSafe==2.0.1
+multidict==5.1.0
+numpy==1.20.1
+pandas==1.2.4
+parso==0.8.1
+pgzero==1.2.1
+pickleshare==0.7.5
+Pillow==8.2.0
+prompt-toolkit==3.0.17
+pycodestyle==2.6.0
+pycparser==2.20
+pygame==2.0.1
+pyglet==1.5.17
+Pygments==2.8.1
+pymunk==6.0.0
+python-dateutil==2.8.1
+python-dotenv==0.17.1
+python-engineio==4.2.1
+python-socketio==5.4.0
+pyTigerDriver==1.0.6
+pytiled-parser==0.9.4a3
+pytz==2021.1
+pywin32==300
+PyYAML==5.4.1
+pyzmq==22.0.3
+requests==2.25.1
+Shapely==1.7.1
+six==1.15.0
+toml==0.10.2
+tornado==6.1
+traitlets==5.0.5
+typing-extensions==3.10.0.0
+urllib3==1.26.4
+validators==0.18.2
+wcwidth==0.2.5
+Werkzeug==2.0.1
+yarl==1.6.3
